Style the checkout forms

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
         </section>
 
-        <div class="forms">
+        <div class="forms flow">
           <section class="form">
             <h2 class="form__title">Contact information</h2>
             <div class="form__group">
@@ -155,12 +155,16 @@
             </div>
           </section>
 
-          <div class="forms__footer">
-            <input type="checkbox" name="save" id="save" />
-            <label for="save">Save this information for next time</label>
+          <div class="save-container">
+            <input type="checkbox" name="save" id="save-checkbox" />
+            <label for="save-checkbox">
+              Save this information for next time
+            </label>
           </div>
 
-          <button class="btn-continue">Continue</button>
+          <div class="btn-wrapper">
+            <button class="btn-continue">Continue</button>
+          </div>
         </div>
       </main>
 
