--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/f51219bb95.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="wrapper flow">
@@ -85,6 +90,7 @@
             <h2 class="form__title">Contact information</h2>
             <div class="form__group">
               <label for="email">E-mail</label>
+              <i class="fas fa-envelope icon icon--left"></i>
               <input
                 type="email"
                 name="email"
@@ -94,6 +100,7 @@
             </div>
             <div class="form__group">
               <label for="phone">Phone</label>
+              <i class="fas fa-phone-alt icon icon--left"></i>
               <input
                 type="tel"
                 name="phone"
@@ -107,6 +114,7 @@
 
             <div class="form__group">
               <label for="name">Full name</label>
+              <i class="fas fa-user-circle icon icon--left"></i>
               <input
                 type="text"
                 name="name"
@@ -116,6 +124,7 @@
             </div>
             <div class="form__group">
               <label for="address">Address</label>
+              <i class="fas fa-home icon icon--left"></i>
               <input
                 type="text"
                 name="address"
@@ -125,6 +134,7 @@
             </div>
             <div class="form__group">
               <label for="city">City</label>
+              <i class="fas fa-city icon icon--left"></i>
               <input
                 type="text"
                 name="city"
@@ -136,15 +146,20 @@
             <div class="county-postcode">
               <div class="form__group">
                 <label for="country">Country</label>
+                <i class="fas fa-globe-africa icon icon--left"></i>
                 <input
                   type="text"
                   name="country"
                   id="country"
                   placeholder="Your country..."
                 />
+                <div class="btn-select">
+                  <i class="fas fa-angle-down icon icon--right"></i>
+                </div>
               </div>
               <div class="form__group">
                 <label for="postal-code">Postal code</label>
+                <i class="fas fa-box icon icon--left"></i>
                 <input
                   type="text"
                   name="postal-code"
