--- a/index.html
+++ b/index.html
@@ -145,17 +145,19 @@
 
             <div class="county-postcode">
               <div class="form__group">
-                <label for="country">Country</label>
+                <label for="country-choice">Country</label>
                 <i class="fas fa-globe-africa icon icon--left"></i>
-                <input
-                  type="text"
-                  name="country"
-                  id="country"
-                  placeholder="Your country..."
-                />
-                <div class="btn-select">
-                  <i class="fas fa-angle-down icon icon--right"></i>
-                </div>
+                  <select id="country-choice">
+                    <option value="">Country...</option>
+                    <option value="Kenya">Kenya</option>
+                    <option value="Uganda">Uganda</option>
+                    <option value="Tanzania">Tanzania</option></option>
+                    <option value="Rwanda">Rwanda</option>
+                    <option value="Burundi">Burundi</option>
+                    <option value="Somalia">Somalia</option>
+                    <option value="Ethiopia">Ethiopia</option>
+                    <option value="South Sudan">South Sudan</option>
+                  </select>
               </div>
               <div class="form__group">
                 <label for="postal-code">Postal code</label>
