Add minimum validation to the form fields

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </section>
 
-        <div class="forms flow">
+        <form class="forms flow">
           <section class="form">
             <h2 class="form__title">Contact information</h2>
             <div class="form__group">
@@ -96,6 +96,7 @@
                 name="email"
                 id="email"
                 placeholder="Enter your email..."
+                required
               />
             </div>
             <div class="form__group">
@@ -106,6 +107,7 @@
                 name="phone"
                 id="phone"
                 placeholder="Enter your phone..."
+                required
               />
             </div>
           </section>
@@ -120,6 +122,8 @@
                 name="name"
                 id="name"
                 placeholder="Rodney Cotton"
+                required
+                minlength="2"
               />
             </div>
             <div class="form__group">
@@ -130,6 +134,7 @@
                 name="address"
                 id="address"
                 placeholder="Your address..."
+                required
               />
             </div>
             <div class="form__group">
@@ -140,6 +145,7 @@
                 name="city"
                 id="city"
                 placeholder="Your city..."
+                required
               />
             </div>
 
@@ -147,7 +153,7 @@
               <div class="form__group">
                 <label for="country-choice">Country</label>
                 <i class="fas fa-globe-africa icon icon--left"></i>
-                  <select id="country-choice">
+                  <select id="country-choice" required>
                     <option value="">Country...</option>
                     <option value="Kenya">Kenya</option>
                     <option value="Uganda">Uganda</option>
@@ -167,6 +173,7 @@
                   name="postal-code"
                   id="postal-code"
                   placeholder="Your postal code..."
+                  required
                 />
               </div>
             </div>
@@ -180,9 +187,9 @@
           </div>
 
           <div class="btn-wrapper">
-            <button class="btn-continue">Continue</button>
+            <button class="btn-continue" type="submit">Continue</button>
           </div>
-        </div>
+        </form>
       </main>
 
       <footer class="footer">
