--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </section>
 
-        <form class="forms flow">
+        <form class="forms flow" onsubmit="return false;">
           <section class="form">
             <h2 class="form__title">Contact information</h2>
             <div class="form__group">
@@ -198,5 +198,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
