Add title to display the required pattern

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                 name="phone"
                 id="phone"
                 placeholder="Enter your phone..."
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                title="Match this example format 111-111-1111"
                 required
               />
             </div>
