Implement increment and decrement logic

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 </div>
               </div>
               <div class="quantity">
-                <button class="quantity__btn">-</button>
-                <p class="quantity__count">1</p>
-                <button class="quantity__btn">+</button>
+                <button class="quantity__btn decrease-qty1">-</button>
+                <p class="quantity__count count1">1</p>
+                <button class="quantity__btn increase-qty1">+</button>
               </div>
             </div>
           </article>
@@ -65,9 +65,9 @@
                 </div>
               </div>
               <div class="quantity">
-                <button class="quantity__btn">-</button>
-                <p class="quantity__count">1</p>
-                <button class="quantity__btn">+</button>
+                <button class="quantity__btn decrease-qty2">-</button>
+                <p class="quantity__count count2">1</p>
+                <button class="quantity__btn increase-qty2">+</button>
               </div>
             </div>
           </article>
